Unified: Add tooltip to the notification icon in status tray.

This only adds "Notifications" tooltip, not describing the count or DnD
status. Also screenreaders will also read the icon as "Notifications"
instead of just "image".

Bug: 878338
Change-Id: Ic8da790d85c950f5c2565bc7c88eb1ebccfd41f3
Reviewed-on: https://chromium-review.googlesource.com/1237735
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593119}
Former-commit-id: a047f6f2084cffef50a8ce143babb9934f864c7b